# IMU_app

./: CMakeLists.txt  README.md  build.sh  main.sh  simul.sh
0_IMU_main/: IMU_main.cpp  IMU_main.h  observer.h
1_IMU_driver/: CMakeLists.txt  ICM_42670_P_driver.c  ICM_42670_P_driver.h  i2c.h  i2c_emul.c  i2c_emul.h
2_IMU_simulator/: IMU_simulator.c  IMU_simulator.h
3_IMU_freefall/: IMU_freefall.cpp  IMU_freefall.h
